# Polkadot-Vanity-Key-Generator

./: Cargo.toml  Makefile  README.md
Page/: index.html  vanity.js
demo/: vanity_bg.wasm
src/: lib.rs
